--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="contenedor-de-proyecto tarjeta-de-proyecto">
           <img src="assets/images/greenyEarth.png" alt="greeny-earth" loading="lazy" class="project-pic" />
-          <h3 class="titulo-de-proyecto">BACK-END</h3>
+          <h3 class="titulo-de-proyecto">FALTA</h3>
           <p class="detalles-proyecto">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
             ratione vel inventore labore commodi modi quos culpa aut saepe!
