--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <a href="#" target="_blank" class="enlace-de-proyecto">Check it Out</a>
         </div>
         <div class="contenedor-de-proyecto tarjeta-de-proyecto ">
-          <img src="assets/images/netflixClone.png" alt="netflic-clone" loading="lazy" class="project-pic" />
+          <img src="assets/images/dino.png" alt="netflic-clone" loading="lazy" class="project-pic" />
           <h3 class="titulo-proyecto">DinoMascotas</h3>
           <p class="detalles-proyecto">
             Página web desarrollada en grupo de 7 personas de forma remota, en Visual Code
@@ -128,12 +128,11 @@
           <a href="#" target="_blank" class="project-link">Check it Out</a>
         </div>
         <div class="contenedor-de-proyecto tarjeta-de-proyecto">
-          <img src="assets/images/greenyEarth.png" alt="greeny-earth" loading="lazy" class="project-pic" />
-          <h3 class="titulo-de-proyecto">FALTA</h3>
+          <img src="assets/images/back.png" alt="greeny-earth" loading="lazy" class="project-pic" />
+          <h3 class="titulo-de-proyecto">Back-End</h3>
           <p class="detalles-proyecto">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Base de datos con MongoDB y parte Back-End con Postman, el cual consiste en la creacion de usurios, clave de
+            ingreso , busqueda , modificacion y eliminacion de usuarios.-
           </p>
           <a href="#" target="_blank" class="enlace-de-proyecto">Echale un vistazo!</a>
         </div>
