--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <main>
     <nav>
       <h1>VIVIANA FIOCCHI</h1>
-      <ul class="navegacion">
+      <ul class="navigation">
         <li><a href="#about" class="nav-link">Acerca de Mí</a></li>
-        <li><a href="#habilidades" class="nav-link">Habilidades</a></li>
-        <li><a href="#proyectos" class="nav-link">Proyectos</a></li>
-        <li><a href="#contacto" class="nav-link">Contacto</a></li>
+        <li><a href="#skills" class="nav-link">Habilidades</a></li>
+        <li><a href="#proyects" class="nav-link">Proyectos</a></li>
+        <li><a href="#contact" class="nav-link">Contacto</a></li>
       </ul>
-      <button class="menu-hamburguesa" id="menu-hamburguesa">
-        <ion-icon class="barras" name="menu-outline"></ion-icon>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
       </button>
     </nav>
     <!-- Sección Hero  -->
@@ -39,122 +39,131 @@
       <div class="bio animate__animated animated__shakeX">
         <h2 class="bio-titulo">Sobre Mi</h2>
         <p class="bio-texto">
-          Hola soy Viviana, Desarrolladora Web. actualmente trabajo en la Coordinacion de Politicas de Genero Zonal Mar
-          del Plata como colaboradora. <br> Me encuentro estudiando Ingenieria en Informatica en la Facultad de
-          Ingenierida
-          de la Univarsidad Nacional de Mar del Plata, estoy cursando segundo año.
+          Hola soy Viviana, tengo 30 años, naci en la ciudad de Mar del Plata provincia de Buenos Aires el dia 15 de Noviembre de 1992. Soy Diplomada en Desarrollo Web Full Stack. Actualmente trabajo en la Coordinacion de Politicas de Genero Zonal Mar
+          del Plata como colaboradora. <br> Me encuentro estudiando Ingenieria en Informatica en la Facultad de Ingenierida de la Univarsidad Nacional de Mar del Plata, estoy cursando segundo año.
         </p>
       </div>
     </section>
 
     <!-- Sobre Mí -->
-    <section class="mas-sobre">
+    <section class="more-about">
       <h2>Más sobre mí</h2>
-      <p>
-        Curse Diplomatura en Desarrollador Web FullStack en el año 2022 con una duracion de 9 meses, la cual fue dictada
-        por la Academia Numen.
-        Realice cursos bootcamp introductorios a la programacion, fortaleciendo los fundamentos basicos y logica del
-        codigo, dictado por la academia EGG. Como desarrolladora en Python de duracion 6 meses dictado por Codo a Codo
-        4.0 del Gobierno de La Ciudad de Buenos Aires.
-        Actualmente me encuentro cursando bootcamp de One Oracle Next Education para Back-End.-
-      </p>
-      <p>
-
-      </p>
-      <p>
-        En los años trabajados aprendí que la base de una buena relación, tanto con los miembros del equipo
-        laboral o personas terceras, es la profesionalidad , el respeto y la honestidad. Asimismo valoro de los
-        profesionales con los que comparto mi lugar laboral su sinceridad y compromiso con su trabajo diario.-
-      </p>
+      <br>
+      <h3>Cursos - Bootcamp</h3>
+      <ul>
+        <li><b>Numen Academy</b> <br>
+          Diplomatura, Desarrollador web Full Stack · (2022)</li>
+          <br>
+          <li><b>Codo a codo 4.0</b> <br>
+            Desarrollador Python (2022)</li>
+            <br>
+          <li><b>Eggacademy</b> <br>
+            Programación informática, general—Fundamentos y Lógica (2022)</li>
+            <br>
+        <li><b>One Oracle Next Education</b> <br>
+          Desarrolladora en Back-End</li>
+        </ul>
+          <br>
+          <h3>Idiomas</h3>
+          <h3>Ingles:</h3>
+          <ul>
+            <li>
+              Nivel Escritura: A2</li><li>Nivel de comprensión de textos : A2</li>
+              </li>
+          </ul>
     </section>
+
     <!-- Sección Habilidades -->
-    <section class="habilidades" id="habilidades">
-      <h2 class="header-habilidadr">Mis Habilidades</h2>
+
+    <section class="skills" id="skills">
+      <h2 class="skill-header">Mis Habilidades</h2>
       <h4>Nivel Principiante</h4>
 
-      <div class="contenedor-habilidades">
+      <div class="skills-wrapper">
         <div class="first-set animate__animated animate__pulse">
           <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
-        </div>
-
-        <div class="second-set animate__animated animate__pulse">
           <img src="assets/icons/icons8-oreja.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-reaccionar-nativo.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-vue-js.svg" alt="" loading="lazy" class="icon icon-card" />
         </div>
-        <div class="third-set animate__animated animate__pulse">
+        <div class="second-set animate__animated animate__pulse">
           <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-mongodb.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-my-sql.svg" alt="" loading="lazy" class="icon icon-card" />
-        </div>
-        <div class="fourth-set animate__animated animate__pulse">
           <img src="assets/icons/icons8-django.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-python.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-visual-studio.svg" alt="" loading="lazy" class="icon icon-card" />
         </div>
       </div>
     </section>
+
     <!-- Sección Proyectos -->
-    <section class="proyectos" id="proyectos">
-      <h2 class="titulo-de-proyectos">Algunos de mis proyectos recientes</h2>
-      <div class="contenedor-de-proyectos">
-        <div class="contenedor-de-proyecto tarjeta-de-proyecto">
+
+    <section class="proyects" id="proyects">
+      <h2 class="projects-title">Algunos de mis proyectos</h2>
+      <div class="projects-container">
+        <div class="project-container project-card">
+          <div class="header-card">
           <img src="assets/images/rivgyf.png" alt="rastreador-de-gastos" loading="lazy" class="project-pic" />
-          <h3 class="titulo-proyecto">RIVGYF (Registro de Intervenciones en casos de Violencia por razones de Genero y /
+          <h3 class="project-title">RIVGYF (Registro de Intervenciones en casos de Violencia por razones de Genero y /
             o Familiar)
-          </h3>
-          <p class="detalles-proyecto">
+          </h3></div>
+          <div class="project-details">
+          <p>
             Aplicación de escritorio en Visual Basic con Visual Studio 2013, la misma consiste en el registro de
             Intervenciones en caso de Violencia Familiar y / o por razones de Género dentro de los Partidos Balcarce,
             Miramar, Mar Chiquita y Gral. Pueyrredón. Dicha aplicación esta conectada a una Base de Datos MySQL, la cual
             se aloja en Hosting Web, con el fin de poder conectarse y utilizar la aplicación desde cualquier lugar. Esta
             aplicación fue diseñada para ser utilizada por personal de Coordinación Zonal de Políticas de Genero de
             manera interna.
-          </p>
-          <a href="#" target="_blank" class="enlace-de-proyecto">Check it Out</a>
+          </p></div>
         </div>
-        <div class="contenedor-de-proyecto tarjeta-de-proyecto ">
+        <div class="project-container project-card">
+          <div class="header-card">
           <img src="assets/images/dino.png" alt="netflic-clone" loading="lazy" class="project-pic" />
-          <h3 class="titulo-proyecto">DinoMascotas</h3>
-          <p class="detalles-proyecto">
+          <h3 class="project-title">DinoMascotas</h3>
+        </div>
+          <div class="project-details">
+          <p>
             Página web desarrollada en grupo de 7 personas de forma remota, en Visual Code
             2019, Front-End con Html, CSS, React y Javascript y Back-End se utilizo un
             Servidor Falso Json con Axios. La página es de compras de productos para
             mascotas. <br>
-            Link: https://dino-mascotas.vercel.app/
-          </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          </p></div>
+          <a href="https://dino-mascotas.vercel.app/" target="_blank" class="project-link">Check it Out</a>
         </div>
-        <div class="contenedor-de-proyecto tarjeta-de-proyecto">
+        <div class="project-container project-card">
+          <div class="header-card">
           <img src="assets/images/back.png" alt="greeny-earth" loading="lazy" class="project-pic" />
-          <h3 class="titulo-de-proyecto">Back-End</h3>
-          <p class="detalles-proyecto">
+          <h3 class="project-title">Back-End</h3>
+        </div>
+          <div class="project-details">
+          <p>
             Base de datos con MongoDB y parte Back-End con Postman, el cual consiste en la creacion de usurios, clave de
             ingreso , busqueda , modificacion y eliminacion de usuarios.-
-          </p>
-          <a href="#" target="_blank" class="enlace-de-proyecto">Echale un vistazo!</a>
+          </p></div>
         </div>
       </div>
     </section>
     <!-- Sección Contacto-->
-    <section class="contacto" id="contacto">
-      <h2>Contactame</h2>
-      <div class="formulario-contacto-contenedor">
-        <div class="formulario-contacto">
+    <section class="contact" id="contact">
+      <h2>Contactame por correo electronico</h2>
+      <div class="contact-form-container">
+        <div class="contact-form">
           <form action="https://formsubmit.co/fiocchiv2@gmail.com" method="POST">
-            <div class="control-formulario">
+            <div class="form-control">
               <label for="name">Nombre</label>
               <input type="text" id="name" name="sender-name" placeholder="Escribe tu nombre" class="input-field"
                 required />
             </div>
-            <div class="control-formulario">
+            <div class="form-control">
               <label for="email">Correo Electrónico</label>
               <input type="email" id="email" name="sender-email" placeholder="Ingreso tu correo electrónico"
                 class="input-field" required />
             </div>
-            <div class="control-formulario">
+            <div class="form-control">
               <label for="mensaje">Mensaje</label>
               <textarea id="mensaje" cols="60" rows="10" placeholder="Escribe tu mensaje" name="mensaje"
                 class="input-field" required></textarea>
@@ -165,7 +174,7 @@
       </div>
     </section>
     <!-- Sección de redes sociales - Fijado a la derecha -->
-    <div class="sociales">
+    <div class="socials">
       <a href="#" target="_blank"><img src="assets/icons/icons8-instagram.gif" alt="Instagram" loading="lazy"
           class="socicon" /></a>
       <a href="#" target="_blank"><img src="assets/icons/icons8-linkedin.gif" alt="Linkedin" loading="lazy"
@@ -175,13 +184,19 @@
   </main>
   <!-- Sección Footer  -->
   <footer class="footer">
+    <h3>DATOS DE CONTACTO</h3>
+<ul>
+    <li>Tel: +549 223-15597974</li>
+    <li>Correo: fiocchiv@gmail.com</li>
+    <li id="Vinculo LinkedIn"> <a href="www.linkedin.com/in/viviana-fiocchi-321a43102">Vinculo LinkedIn</a> </li>
+  </ul>
     <p class="copy">&copy; Copyright 2021</p>
     <p class="copy">
       Built with &#x2661; by
-      <a href="https://twitter.com/koladechris" target="_blank">Fiocchi Viviana</a>
+      <a  target="_blank">Fiocchi Viviana</a>
     </p>
-    <i class="desplazarse-hacia-arriba" id="desplazarse-hacia-arriba"><img src="assets/icons/icons8-arriba-círculo.gif"
-        class="socicon up-arrow" alt="desplazarse-hacia-arriba" /></i>
+    <i class="scroll-up" id="scroll-up"><img src="assets/icons/icons8-arriba-círculo.gif"
+        class="socicon up-arrow" alt="scroll-up" /></i>
   </footer>
 
 
@@ -195,8 +210,3 @@
 </body>
 
 </html>
-
-<!-- 
-info -->
-
-<!-- https://github.com/Ksound22/developer-portfolio -->
