se agregan datos personales y link de contacto

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="socials">
       <a href="#" target="_blank"><img src="assets/icons/icons8-instagram.gif" alt="Instagram" loading="lazy"
           class="socicon" /></a>
-      <a href="#" target="_blank"><img src="assets/icons/icons8-linkedin.gif" alt="Linkedin" loading="lazy"
+      <a href="https://www.linkedin.com/in/viviana-fiocchi-321a43102" target="_blank"><img src="assets/icons/icons8-linkedin.gif" alt="Linkedin" loading="lazy"
           class="socicon" /></a>
       <a href="#" target="_blank"><img src="assets/icons/icons8-facebook-rodeado-de-círculo.gif" alt="Facebook"
           class="socicon" /></a>
@@ -188,7 +188,7 @@
 <ul>
     <li>Tel: +549 223-15597974</li>
     <li>Correo: fiocchiv@gmail.com</li>
-    <li id="Vinculo LinkedIn"> <a href="www.linkedin.com/in/viviana-fiocchi-321a43102">Vinculo LinkedIn</a> </li>
+    <li id="Vinculo LinkedIn"> <a href="https://www.linkedin.com/in/viviana-fiocchi-321a43102">Vinculo LinkedIn</a> </li>
   </ul>
     <p class="copy">&copy; Copyright 2021</p>
     <p class="copy">
