se edita botones de redes sociales

--- a/index.html
+++ b/index.html
@@ -175,11 +175,9 @@
     </section>
     <!-- Sección de redes sociales - Fijado a la derecha -->
     <div class="socials">
-      <a href="#" target="_blank"><img src="assets/icons/icons8-instagram.gif" alt="Instagram" loading="lazy"
+      <a href="https://github.com/VivianaFiocchi" target="_blank"><img src="assets/icons/icons8-git.svg" alt="Instagram" loading="lazy"
           class="socicon" /></a>
       <a href="https://www.linkedin.com/in/viviana-fiocchi-321a43102" target="_blank"><img src="assets/icons/icons8-linkedin.gif" alt="Linkedin" loading="lazy"
-          class="socicon" /></a>
-      <a href="#" target="_blank"><img src="assets/icons/icons8-facebook-rodeado-de-círculo.gif" alt="Facebook"
           class="socicon" /></a>
   </main>
   <!-- Sección Footer  -->
