--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <div class="bio animate__animated animated__shakeX">
         <h2 class="bio-titulo">Sobre Mi</h2>
         <p class="bio-texto">
-          Hola soy Viviana, tengo 30 años, naci en la ciudad de Mar del Plata provincia de Buenos Aires el dia 15 de Noviembre de 1992. Soy Diplomada en Desarrollo Web Full Stack. Actualmente trabajo en la Coordinacion de Politicas de Genero Zonal Mar
-          del Plata como colaboradora. <br> Me encuentro estudiando Ingenieria en Informatica en la Facultad de Ingenierida de la Univarsidad Nacional de Mar del Plata, estoy cursando segundo año.
+          Hola soy Viviana, tengo 30 años, naci en la ciudad de Mar del Plata, Provincia de Buenos Aires, el dia 15 de Noviembre de 1992. Soy Diplomada en Desarrollo Web Full Stack. Actualmente trabajo en la Coordinación de Políticas de Género Zonal Mar
+          del Plata como colaboradora. <br> Me encuentro cursando segundo año de Ingenieria en Informática en la Facultad de Ingenieria de la Universidad Nacional de Mar del Plata.-
         </p>
       </div>
     </section>
@@ -51,17 +51,16 @@
       <br>
       <h3>Cursos - Bootcamp</h3>
       <ul>
-        <li><b>Numen Academy</b> <br>
-          Diplomatura, Desarrollador web Full Stack · (2022)</li>
+        <li><b>Numen Academy</b> <br>Web Full Stack · (Mar. 2022 - Nov. 2022)</li>
           <br>
-          <li><b>Codo a codo 4.0</b> <br>
-            Desarrollador Python (2022)</li>
+          <li><b>Codo a Codo 4.0</b> <br>
+            Desarrollador Python (Jun. 2022 - Dic. 2022)</li>
             <br>
-          <li><b>Eggacademy</b> <br>
-            Programación informática, general—Fundamentos y Lógica (2022)</li>
+          <li><b>EggAcademy</b> <br>
+            Programación informática, general—Fundamentos y Lógica (Abril 2022 - May. 2022)</li>
             <br>
         <li><b>One Oracle Next Education</b> <br>
-          Desarrolladora en Back-End</li>
+          Desarrolladora en Back-End (Dic. 2022 - cursando) </li>
         </ul>
           <br>
           <h3>Idiomas</h3>
@@ -69,7 +68,6 @@
           <ul>
             <li>
               Nivel Escritura: A2</li><li>Nivel de comprensión de textos : A2</li>
-              </li>
           </ul>
     </section>
 
@@ -113,7 +111,7 @@
           <div class="project-details">
           <p>
             Aplicación de escritorio en Visual Basic con Visual Studio 2013, la misma consiste en el registro de
-            Intervenciones en caso de Violencia Familiar y / o por razones de Género dentro de los Partidos Balcarce,
+            Intervenciones en caso de Violencia Familiar y / o por razones de Género, dentro de los Partidos Balcarce,
             Miramar, Mar Chiquita y Gral. Pueyrredón. Dicha aplicación esta conectada a una Base de Datos MySQL, la cual
             se aloja en Hosting Web, con el fin de poder conectarse y utilizar la aplicación desde cualquier lugar. Esta
             aplicación fue diseñada para ser utilizada por personal de Coordinación Zonal de Políticas de Genero de
