--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <br>
       <h3>Cursos - Bootcamp</h3>
       <ul>
-        <li><b>Numen Academy</b> <br>Web Full Stack · (Mar. 2022 - Nov. 2022)</li>
+        <li><b>Numen Academy</b> <br>Diplomatura en Desarrollo Web Full Stack · (Mar. 2022 - Nov. 2022)</li>
         <br>
         <li><b>Codo a Codo 4.0</b> <br>
           Desarrollador Python (Jun. 2022 - Dic. 2022)</li>
