--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <br>
       <h3>Cursos - Bootcamp</h3>
       <ul>
-        <li><b>Numen Academy</b> <br>Diplomatura en Desarrollo Web Full Stack · (Mar. 2022 - Nov. 2022)</li>
+        <li><b>Numen Academy</b> <br>Diplomatura en Desarrollo Web Full Stack · (Mar. 2022 - Dic. 2022)</li>
         <br>
         <li><b>Codo a Codo 4.0</b> <br>
           Desarrollador Python (Jun. 2022 - Dic. 2022)</li>
@@ -63,15 +63,14 @@
           Programación informática, general—Fundamentos y Lógica (Abril 2022 - May. 2022)</li>
         <br>
         <li><b>One Oracle Next Education</b> <br>
-          Desarrolladora en Back-End (Dic. 2022 - cursando) </li>
+          Desarrolladora en Back-End (Dic. 2022 - Junio 2023) </li>
       </ul>
       <br>
       <h3>Idiomas</h3>
       <h3>Ingles:</h3>
       <ul>
         <li>
-          Nivel Escritura: A2</li>
-        <li>Nivel de comprensión de textos : A2</li>
+          Nivel Intermedio</li>
       </ul>
     </section>
 
@@ -151,6 +150,17 @@
               Base de datos con MongoDB y parte Back-End con Postman, el cual consiste en la creacion de usurios, clave
               de
               ingreso , busqueda , modificacion y eliminacion de usuarios.-
+            </p>
+          </div>
+        </div>
+         <div class="project-container project-card">
+          <div class="header-card">
+            <img src="assets/images/back.png" alt="greeny-earth" loading="lazy" class="project-pic" />
+            <h3 class="project-title">Encriptador</h3>
+          </div>
+          <div class="project-details">
+            <p>
+              Pagina web donde se podra Encriptar y desencriptar textos.-
             </p>
           </div>
         </div>
