--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
          <div class="project-container project-card">
           <div class="header-card">
-            <img src="assets/images/back.png" alt="greeny-earth" loading="lazy" class="project-pic" />
+            <img src="assets/images/Oracle.png" alt="greeny-earth" loading="lazy" class="project-pic" />
             <h3 class="project-title">Encriptador</h3>
           </div>
           <div class="project-details">
@@ -163,6 +163,7 @@
               Pagina web donde se podra Encriptar y desencriptar textos.-
             </p>
           </div>
+          <a href="https://vivianafiocchi.github.io/ENCRIPTADOR/" target="_blank" class="project-link">Check it Out</a>
         </div>
       </div>
     </section>
