--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <li><b>Codo a Codo 4.0</b> <br>
           Desarrollador Python (Jun. 2022 - Dic. 2022)</li>
         <br>
-        <li><b>EggAcademy</b> <br>
-          Programación informática, general—Fundamentos y Lógica (Abril 2022 - May. 2022)</li>
-        <br>
         <li><b>One Oracle Next Education</b> <br>
           Desarrolladora en Back-End (Dic. 2022 - Junio 2023) </li>
+        <br>
+        <li><b>Digit@lers - EducacionITn</b> <br>
+         Data Analytics (Junio 2023 - Noviembre 2023) </li>
       </ul>
       <br>
       <h3>Idiomas</h3>
@@ -96,6 +96,7 @@
           <img src="assets/icons/icons8-django.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-python.svg" alt="" loading="lazy" class="icon icon-card" />
           <img src="assets/icons/icons8-visual-studio.svg" alt="" loading="lazy" class="icon icon-card" />
+          <img src="assets/icons/power-bi-vector-logo-2022.svg" alt="" loading="lazy" class="icon icon-card" />
         </div>
       </div>
     </section>
